Fix skyline background on mobile by disabling fixed attachment

--- a/interpreter-z.css
+++ b/interpreter-z.css
@@ -468,4 +468,9 @@
     .izs-title {
         font-size: 32px;
     }
+
+    .izs-area {
+        background-attachment: scroll;
+        min-height: 320px;
+    }
 }
